--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,6 +1,5 @@
 @import url("./reset.css");
 
-
 header {
   background-color: #262930;
 }
@@ -28,6 +27,7 @@ nav ul {
 nav ul li{
   display: inline;
   line-height: 56px;
+  margin-right: 50px; 
 }
 
 nav ul li a {
@@ -39,36 +39,92 @@ nav ul li a {
   transition: color 0.25s ease-in-out;
 }
 
-nav ul li + li {
-  margin-left: 20px;
-}
-
 body {
   background-color: #191C24;
 }
 
 main {
   margin-top: 30px;
-  margin-left: 200px;
+  margin-left: 30px;
 }
 
 input[type=text] {
-  background-color: #262930;
+  width: 900px;
   height: 40px;
+  padding: 0 15px 0 42px;
+  font-size: 18px;
   color: #fff;
-  font-size: 16px;
-  padding: 10px;
-  width: 500px;
+  font-weight: 400;
+  background: rgb(255 255 255 / 0.1) url("../images/search.png") no-repeat 19px 50%;
+  background-size: 17px;
 }
 
 button {
   color: #fff;
   background-color: #F17930;
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 18px;
   height: 40px;
+  margin-left: 10px;
   width: 80px;
+  place-items: center;
   cursor: pointer;
 }
 
+input[type=text2] {
+  width: 360px;
+  height: 40px;
+  margin-left: 10px;
+  padding: 0 15px 0 42px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 400;
+  background: rgb(255 255 255 / 0.1) url("../images/city.png") no-repeat 19px 50%;
+  background-size: 17px;
+}
 
+#movie-posters {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.movie-poster {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.movie-poster img {
+  width: 200px;
+  height: auto;
+}
+
+.movie-poster h2 {
+  margin-top: 10px;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+} 
+
+.suggestions {
+  margin-top: 10px;
+  position: absolute;
+  background-color: #fff;
+  max-height: 200px;
+  overflow-y: auto;
+  width: 360px;
+  color: #000000;
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+.suggestions:hover {
+  background-color: #F17930;
+  color: #fff;
+}
 
